--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,49 @@
-# TODO
+version: '3'
+
+services:
+
+  web:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    restart: unless-stopped
+    ports:
+      - 80:80
+    command: npm run start
+    volumes:
+      - .:/usr/src/app
+
+  pg:
+    image: postgres:16.0-alpine3.18
+    restart: unless-stopped
+    ports: 
+      - 5432:5432
+    volumes:
+      - ./data/postgresql:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_DB=checkers_db
+      - POSTGRES_PASSWORD=root
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    restart: unless-stopped
+    ports:
+      - 81:80
+    volumes:
+      - ./data/pgadmin:/var/lib/pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@checkers.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    depends_on:
+      - pg
+
+  #ws:
+  #  build:
+  #    context: ../ws_checkers
+  #    dockerfile: ./Dockerfile
+  #  restart: unless-stopped
+  #  environment:
+  #    WS_PORT: ${WS_PORT:-8081}  # TODO actually use the WS_PORT in the dockerfile
+
+
