--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "node_checkers",
+  "name": "web_checkers",
   "version": "1.0.0",
   "description": "Web server for ws_checkers",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "knex": "^3.0.1",
-    "tsc": "^2.0.4",
-    "typescript": "^5.2.2"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
