--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: ./Dockerfile
     restart: unless-stopped
     ports:
-      - 80:80
+      - ${WEB_PORT}:${WEB_PORT}
     command: npm run start
     volumes:
       - .:/usr/src/app
@@ -17,24 +17,25 @@ services:
     image: postgres:16.0-alpine3.18
     restart: unless-stopped
     ports: 
-      - 5432:5432
+      - ${PG_PORT}:5432
     volumes:
       - ./data/postgresql:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      - POSTGRES_DB=checkers_db
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=${PG_DATABASE}
+      - POSTGRES_USER=${PG_USER}
+      - POSTGRES_PASSWORD=${PG_PASS}
 
   pgadmin:
     image: dpage/pgadmin4:latest
     restart: unless-stopped
     ports:
-      - 81:80
+      - ${PGADMIN_PORT}:80
     volumes:
       - ./data/pgadmin:/var/lib/pgadmin
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@checkers.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASS}
     depends_on:
       - pg
 
