--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^3.0.1",
     "morgan": "^1.10.0",
