--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ PG_DATABASE=checkers_db
 PGADMIN_PORT=81
 PGADMIN_EMAIL=admin@checkers.com
 PGADMIN_PASS=admin
+
+# < /dev/urandom tr -cd "[:print:]" | head -c 32; echo
+JWT_SECRET=801{Q[!0rt?qsrY`Q5]d+5=$sIh~%Kg,
