--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web_checkers",
   "version": "1.0.0",
   "description": "Web server for ws_checkers",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "nodemon -i static -L",
     "test": "echo \"Error: no test specified\" && exit 1"
