--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,10 @@ services:
       dockerfile: ./Dockerfile
     restart: unless-stopped
     ports:
-      - ${WS_PORT:-88}:8088
+      - ${WS_PORT:-88}:88
+    volumes:
+      - ../ws_checkers/checkers.db:/go/bin/checkers.db
+    environment:
+      DB_PATH: "/go/bin/checkers.db"
 
 
