--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,14 +14,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Docker Hub login, build and push image
-        run:
-          - echo 'Logging into Docker Hub'
-          - echo 'Building image luc527/ese_web_checkers'
+      - name: Docker Hub login
+        run: echo 'Logging into Docker Hub'
+
+      - name: Build Docker image
+        run: echo 'Building image luc527/ese_web_checkers'
           - echo 'Pushing image to Docker Hub'
 
+      - name: Push Docker image to Docker hub
+        run: echo 'Pushing image to Docker Hub'
+
       - name: Deploy to QA environment
-        run:
-          - echo 'Running docker compose on remote QA host'
-          - cat compose/qa/docker-compose.yml
+        run: cat compose/qa/docker-compose.yml
 
