--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ PG_USER=postgres
 PG_PASS=root
 PG_DATABASE=checkers_db
 
+WS_HOST=host.docker.internal
+WS_PORT=88
+
 PGADMIN_PORT=81
 PGADMIN_EMAIL=admin@checkers.com
 PGADMIN_PASS=admin
